feat: Save fields